updated to add footer back and changed some styles.

--- a/template.html
+++ b/template.html
@@ -1,5 +1,5 @@
     <div class="footer">
-			<nav class="nav">
+			<nav class="navFooter">
 				<div class="leftrow">
 					<a href="https://gatesfoundation.org" target="blank">
 						<img src="./bmgf-logo-white.png" title="Bill & Melinda Gates foundation" alt="IDMlogo"
